welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (Biscuit=true){
              ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (Biscuit=true){
^